Sprint 8: Fixed the modals on admin organization page to match the dark mode theme

--- a/truckersite/static/css/dm_admin_organization.css
+++ b/truckersite/static/css/dm_admin_organization.css
@@ -150,6 +150,10 @@ body{
     margin-right: 100%;
     margin-bottom: 1%;
     margin-left: 2%;
+    background-color: #38383d;
+    color: white;
+    border-style: solid;
+    border-color: #38383d;
 }
 
 #description{
@@ -157,6 +161,10 @@ body{
     width: 80%;
     height: 30%;
     font-size: 130%;
+    background-color: #38383d;
+    color: white;
+    border-style: solid;
+    border-color: #38383d;
 }
 
 .settingtext{
@@ -207,14 +215,13 @@ body{
     padding-top: .1%;
     padding-bottom: .1%;
     border-radius: 30px;
-    border-color: #EDA1A1;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     background-color: #ACEFFF;
     font-size: 120%;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     border-style: solid;
-    border-color: black;
+    border-color: white;
     cursor: pointer;
 }
 
@@ -223,4 +230,9 @@ body{
     color: white;
     border-style: solid;
     border-color: #38383d;
+}
+
+.modal-content{
+    background-color: #2a2a2e;
+    color: white;
 }
